[gd_scene load_steps=3 format=3 uid="uid://cvc75kxsdbkmq"]

[ext_resource type="Script" path="res://settings_menu/settings_menu.gd" id="1_eb84k"]
[ext_resource type="AudioStream" uid="uid://d1kedyujsasxe" path="res://assets/audio/music/space_cadet_training_by_zane_little.mp3" id="2_nptl6"]

[node name="SettingsMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eb84k")
title_path = "res://title_menu/title_menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxSettings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonColumnLeft" type="VBoxContainer" parent="VBoxContainer/HBoxSettings"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxSettings/ButtonColumnLeft"]
layout_mode = 2
text = "test"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxSettings/ButtonColumnLeft"]
layout_mode = 2
text = "test"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxSettings/ButtonColumnLeft"]
layout_mode = 2
text = "test"

[node name="ButtonColumnRight" type="VBoxContainer" parent="VBoxContainer/HBoxSettings"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxSettings/ButtonColumnRight"]
layout_mode = 2
text = "test"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxSettings/ButtonColumnRight"]
layout_mode = 2
text = "test"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxSettings/ButtonColumnRight"]
layout_mode = 2
text = "test"

[node name="HBoxNavigation" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReturnButton" type="Button" parent="VBoxContainer/HBoxNavigation"]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Title"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxNavigation"]
layout_mode = 2
text = "Quit Game"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nptl6")
autoplay = true

[connection signal="pressed" from="VBoxContainer/HBoxNavigation/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxNavigation/QuitButton" to="." method="_on_quit_button_pressed"]
